Fix carousel spacing

--- a/app/assets/stylesheets/admin/cdx-editor/editor.sass
+++ b/app/assets/stylesheets/admin/cdx-editor/editor.sass
@@ -65,6 +65,9 @@
   .ui.dropdown > .text
     font-weight: normal !important
 
+  input
+    width: 100%
+
 
 // INPUTS
 .cdx-input
